--- a/configure.in
+++ b/configure.in
@@ -36,6 +36,22 @@ if test "x$enable_gums" = "xyes" ; then
 fi
 AM_CONDITIONAL(ENABLE_GUMS, test "x$enable_gums" = "xyes")
 
+# Should we build winbind mapping library?
+AC_ARG_ENABLE([winbind],
+	[AS_HELP_STRING([--disable-winbind],[Disable support for winbind @<:@default=detect@:>@])])
+if test "x$enable_winbind" != "xno" ; then
+	AC_CHECK_HEADER([wbclient.h],
+		[AC_CHECK_LIB([wbclient], [wbcPing],
+		              [have_winbind="yes"],[have_winbind="no"])],
+		[have_winbind="no"])
+	if test "x$have_winbind" = "xyes" ; then
+		AC_DEFINE([ENABLE_WINBIND], 1, [Enable Winbind Support])
+	elif test "x$enable_winbind$have_winbind" = "xyesno" ; then
+		AC_MSG_ERROR(Winbind support not found!)
+	fi
+fi
+AM_CONDITIONAL(ENABLE_WINBIND, test "x$have_winbind" = "xyes")
+
 #Where do the Plugins live
 AC_ARG_WITH(pluginpath,
     [AS_HELP_STRING([--with-pluginpath=/foo],[Causes the library to look in /foo instead of /usr/lib/libnfsidmap for plugins
